tests/snapshots/r#mod__reset__reset_menu.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        " _______ main add unwanted-file                                                 ",
        "▌_______ origin/main add initial-file                                           ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        "Reset                                     _______ origin/main add i             ",
        "                                          s Reset soft                          ",
        "                                          m Reset mixed                         ",
        "                                          h Reset hard                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 1, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 7, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 8, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 9, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
